Fixed some styling on tablets, and changed the animation on the portfolio page.

--- a/client/src/pages/Portfolio/portfolio.css
+++ b/client/src/pages/Portfolio/portfolio.css
@@ -43,7 +43,7 @@
 }
 
 .liveLink:hover, .repoLink:hover {
-    color: rgb(95, 95, 95);
+    color: rgb(126, 126, 126);
     text-decoration: none;
 }
 
@@ -68,6 +68,10 @@
         float: none;
         width: 100%;
         margin: 0px 0px 20px 0px;
+    }
+
+    .description {
+        margin-left: 0;
     }
 }
 
